# hurricane_lang

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/hurricane/: config.hpp.in
